--- a/Ressources/Private/index.html
+++ b/Ressources/Private/index.html
@@ -11,36 +11,48 @@
 
 <body>
 
-    <img class="background-left" src="../img/bg_objekt_links.svg" alt="background">
     <img class="background-right" src="../img/bg_objekt_oben_rechts.svg" alt="background">
-    <img class="background-right-bottom" src="../img/bg_objekt_unten_rechts_menu.svg" alt="background">
-    
+    <img class="background-left-bottom" src="../img/bg_objekt_unten_links.svg" alt="background">
+
     <div class="nav-container">
         <nav class="navbar">
             <div class="logo">
                 <a href="index.html"><img src="../img/zmg_logo.svg" alt="Logo"></a>
             </div>
             <ul class=nav-items>
-                <li><p>Anmelden</p><svg xmlns="http://www.w3.org/2000/svg" width="32" height="33" viewBox="0 0 32 33">
-                    <g id="Person" transform="translate(-1256 -3484.5)">
-                      <rect id="Rechteck_111" data-name="Rechteck 111" width="32" height="32" transform="translate(1256 3485)" fill="#fff" opacity="0"/>
-                      <path id="Schnittmenge_4" data-name="Schnittmenge 4" d="M-9900.238-10c-.275-4.4-.527-8.81-.781-13.215-.158-2.725,1.029-3.982,3.781-3.993,2.711-.012,5.42,0,8.129,0,.9,0,1.807,0,2.709,0,1.887,0,3.773-.006,5.66.01,2.4.019,3.48,1.03,3.406,3.438-.105,3.574-.34,7.146-.561,10.715q-.1,1.526-.205,3.05Zm11.182-19.681a6.2,6.2,0,0,1-6.172-6.226A5.963,5.963,0,0,1-9889.2-42a5.978,5.978,0,0,1,6.146,6.108,6.146,6.146,0,0,1-5.965,6.21Z" transform="translate(11161.182 3526.999)" stroke="rgba(0,0,0,0)" stroke-miterlimit="10" stroke-width="1"/>
-                    </g>
-                  </svg></li>
-                <li><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
-                    <g id="Lupe" transform="translate(-1295 -3485)">
-                      <rect id="Rechteck_112" data-name="Rechteck 112" width="32" height="32" transform="translate(1295 3485)" fill="#fff" opacity="0"/>
-                      <path id="Icon_material-search" data-name="Icon material-search" d="M27.37,24.626H25.925l-.512-.494a11.91,11.91,0,1,0-1.281,1.281l.494.512V27.37l9.148,9.13L36.5,33.774Zm-10.978,0a8.233,8.233,0,1,1,8.233-8.233A8.222,8.222,0,0,1,16.393,24.626Z" transform="translate(1290.5 3480.5)"/>
-                    </g>
-                  </svg>
-                  </li>
-                <li> <button class="menuButton show-menu" onclick="this.classList.toggle('opened');this.setAttribute('aria-expanded', this.classList.contains('opened'))" aria-label="Main Menu">
-                    <svg width="40" height="40" viewBox="0 0 100 100">
-                      <path class="line line1" d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058" />
-                      <path class="line line2" d="M 20,50 H 80" />
-                      <path class="line line3" d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942" />
+                <li>
+                    <p>Anmelden</p><svg xmlns="http://www.w3.org/2000/svg" width="32" height="33" viewBox="0 0 32 33">
+                        <g id="Person" transform="translate(-1256 -3484.5)">
+                            <rect id="Rechteck_111" data-name="Rechteck 111" width="32" height="32"
+                                transform="translate(1256 3485)" fill="#fff" opacity="0" />
+                            <path id="Schnittmenge_4" data-name="Schnittmenge 4"
+                                d="M-9900.238-10c-.275-4.4-.527-8.81-.781-13.215-.158-2.725,1.029-3.982,3.781-3.993,2.711-.012,5.42,0,8.129,0,.9,0,1.807,0,2.709,0,1.887,0,3.773-.006,5.66.01,2.4.019,3.48,1.03,3.406,3.438-.105,3.574-.34,7.146-.561,10.715q-.1,1.526-.205,3.05Zm11.182-19.681a6.2,6.2,0,0,1-6.172-6.226A5.963,5.963,0,0,1-9889.2-42a5.978,5.978,0,0,1,6.146,6.108,6.146,6.146,0,0,1-5.965,6.21Z"
+                                transform="translate(11161.182 3526.999)" stroke="rgba(0,0,0,0)" stroke-miterlimit="10"
+                                stroke-width="1" />
+                        </g>
                     </svg>
-                  </button>
+                </li>
+                <li><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                        <g id="Lupe" transform="translate(-1295 -3485)">
+                            <rect id="Rechteck_112" data-name="Rechteck 112" width="32" height="32"
+                                transform="translate(1295 3485)" fill="#fff" opacity="0" />
+                            <path id="Icon_material-search" data-name="Icon material-search"
+                                d="M27.37,24.626H25.925l-.512-.494a11.91,11.91,0,1,0-1.281,1.281l.494.512V27.37l9.148,9.13L36.5,33.774Zm-10.978,0a8.233,8.233,0,1,1,8.233-8.233A8.222,8.222,0,0,1,16.393,24.626Z"
+                                transform="translate(1290.5 3480.5)" />
+                        </g>
+                    </svg>
+                </li>
+                <li> <button class="menuButton show-menu"
+                        onclick="this.classList.toggle('opened');this.setAttribute('aria-expanded', this.classList.contains('opened'))"
+                        aria-label="Main Menu">
+                        <svg width="40" height="40" viewBox="0 0 100 100">
+                            <path class="line line1"
+                                d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058" />
+                            <path class="line line2" d="M 20,50 H 80" />
+                            <path class="line line3"
+                                d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942" />
+                        </svg>
+                    </button>
                 </li>
             </ul>
         </nav>
@@ -50,8 +62,12 @@
         <ul class="nav-level-1">
             <li><a href="sub.html">News</a></li>
             <li><a href="sub.html">Studien</a></li>
-            <li><p class="has-subPage services">Services</p></li>
-            <li><p class="has-subPage tools">Tools & Instrumente</p></li>
+            <li>
+                <p class="has-subPage services">Services</p>
+            </li>
+            <li>
+                <p class="has-subPage tools">Tools & Instrumente</p>
+            </li>
             <li><a href="sub.html">Seminare & Workshops</a></li>
             <li><a href="sub.html">ZMG-Archiv</a></li>
             <li><a href="sub.html">Unser Team</a></li>
@@ -74,96 +90,87 @@
             <div class="menu-teaser-image">
             </div>
             <h3>Dies ist ein Teaser</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, cum. Nobis dolorem voluptate eaque quod? Obcaecati tenetur ipsam mollitia minus.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, cum. Nobis dolorem voluptate eaque quod?
+                Obcaecati tenetur ipsam mollitia minus.</p>
         </div>
     </div>
 
-    <div class="content-wrapper">
-    
-        <div class="bread-crumb">
-            <ul>
-                <li><a href="index.html">Startseite</a></li>
-            </ul>
-        </div>
 
+    <div class="header-image-container">
+        <img src="../img/teaser/6.jpg" alt="" class="header-image">
+    </div>
+    <div class="content-wrapper">
         <main>
+
+
+            <div class="header-text">
+                <h2>Wir zeigen die Kraft der Zeitungen</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti commodi amet enim molestiae sed
+                    labore sit, esse suscipit, obcaecati quidem molestias facilis repudiandae sequi doloremque
+                    praesentium qui ea nemo. Illo tenetur reprehenderit sunt id consectetur ex nostrum soluta
+                    repudiandae laudantium libero officiis nam, aspernatur maiores minima sequi! Quos quia at, optio, ab
+                    quisquam mollitia similique placeat aliquam enim quae aliquid asperiores expedita labore
+                    perspiciatis nihil sint, magnam sapiente excepturi non!</p>
+            </div>
+
             <h1>Studien</h1>
 
-            <div class="teaser">
-                <img src="../img/teaser/1.png" alt="first-teaser">
-                <div class="teaser-content">
-                    <p class="teaser-category">Digitalisierung, Journalismus</p>
-                    <h2 class="teaser-title">Studie Digitaler Journalismus</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, odit dolorum obcaecati numquam aliquam eum beatae minus placeat ad. Libero iusto nam mollitia tenetur impedit provident animi voluptas dolorum, saepe itaque, ab molestiae laudantium corporis!</p>
-                    <a href="sub.html">Mehr</a>
-                </div>
-            </div>
-            <div class="teaser">
-                <img src="../img/teaser/3.png" alt="second-teaser">
-                <div class="teaser-content">
-                    <p class="teaser-category">Branche, Energieberater</p>
-                    <h2 class="teaser-title">Energieanbieter-Studie</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sit quis aliquid ratione perspiciatis sint, molestias placeat doloremque nemo harum praesentium rerum dicta quo iusto neque quam recusandae, maiores sequi impedit? Dolores cum temporibus voluptates!</p>
-                    <a href="sub.html">Mehr</a>
-                </div>
-            </div>
-            <div class="teaser">
-                <img src="../img/teaser/4.png" alt="third-teaser">
-                <div class="teaser-content">
-                    <p class="teaser-category">Digitalisierung, Journalismus, Aktuell</p>
-                    <h2 class="teaser-title">E-Paper-Studie 2020</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit qui quis soluta quod iusto a numquam fugit saepe natus cumque ea odio nisi, hic laborum? Vitae voluptate excepturi blanditiis. Nam quam magni reiciendis odit soluta!</p>
-                    <a href="sub.html">Mehr</a>
-                </div>
-            </div>
-            <div class="teaser">
-                <img src="../img/teaser/2.png" alt="third-teaser">
-                <div class="teaser-content">
-                    <p class="teaser-category">Digitalisierung</p>
-                    <h2 class="teaser-title">Smart-Home-Studie</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum pariatur, eveniet aspernatur quisquam quaerat quibusdam, ea repudiandae deleniti nemo nihil, laudantium laboriosam! Architecto, dolorem! Quod iste nostrum tenetur dolorem atque quia quos accusamus nihil rerum!</p>
-                    <a href="sub.html">Mehr</a>
-                </div>
-            </div>
-            <div class="teaser">
-                <img src="../img/teaser/5.png" alt="first-teaser">
-                <div class="teaser-content">
-                    <p class="teaser-category">Aktuell, Journalismus</p>
-                    <h2 class="teaser-title">Corona-Studie</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi beatae a, veniam eaque inventore reprehenderit necessitatibus, omnis autem, facilis officiis obcaecati cupiditate laborum fuga facere sapiente pariatur quae quasi perspiciatis molestias impedit soluta! Iusto, laborum!</p>
-                    <a href="sub.html">Mehr</a>
-                </div>
-            </div>
-
-            <a href="sub.html" class="cta">Zum zmg-Wissensportal</a>
-
-            <div class="content-element-2">
+            <div class="teaser-container">
                 <div class="teaser">
-                    <a href="sub">Weiterlesen</a>
-                    <a href="sub">Anmelden</a>
-                </div>
-                <div class="teaser-content">
-                    <div class="teaser-text">
-                        <h3>Jetzt alle Inhalte lesen</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet nobis cum magnam at quia ut
-                            natus ipsa libero, soluta reiciendis explicabo repudiandae quidem dolore magni culpa nam.
-                            Molestias, tempora. Eius, omnis mollitia voluptatem nesciunt animi facere neque totam quam
-                            ducimus!</p>
+                    <img src="../img/teaser/7.png" alt="first-teaser">
+                    <div class="teaser-content">
+                        <h2 class="teaser-title">Auflagen der Zeitungen</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias, enim,
+                            ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.</p>
+                        <a href="secondsub.html">Mehr</a>
                     </div>
-                    <img src="../img/illu_mitgleidschafft.svg" alt="">
+                </div>
+                <div class="teaser">
+                    <img src="../img/teaser/8.png" alt="second-teaser">
+                    <div class="teaser-content">
+                        <h2 class="teaser-title">Media-Beratung</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias, enim,
+                            ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.</p>
+                        <a href="secondsub.html">Mehr</a>
+                    </div>
+                </div>
+                <div class="teaser">
+                    <img src="../img/teaser/9.png" alt="third-teaser">
+                    <div class="teaser-content">
+                        <h2 class="teaser-title">Gremien</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quos alias molestias, enim,
+                            ipsum ab illum voluptatem ratione eos praesentium optio reiciendis at commodi delectus.</p>
+                        <a href="secondsub.html">Mehr</a>
+                    </div>
                 </div>
             </div>
+            <div class="content-element-1">
+                <h2 class="image-title">Bildüberschrift</h2>
+                <div class="image-container">
+                    <img src="../img/teaser/6.jpg" alt="cover">
+                </div>
+                <h2>Überschrift</h2>
+                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem repellendus iure cupiditate?</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas laudantium iusto, deleniti velit
+                    veritatis ea beatae inventore ab recusandae ullam ut error repellat officia ad. Ipsum fugiat quasi
+                    in aut? Reprehenderit minima labore ratione hic eos dolorum iste animi saepe sed natus deserunt
+                    dignissimos at accusamus error fugiat, nihil ex. Iste pariatur, dolorum et beatae, facilis numquam
+                    fugit veritatis hic cumque, quisquam quo ullam earum.</p>
+            </div>
+
+
         </main>
 
-    </div> <!--Wrapper closing-->
+    </div>
+    <!--Wrapper closing-->
 
     <div class="footer-container">
         <div class="footer">
             <ul>
-                <li><a href="sub.html">Impressum</a></li>
-                <li><a href="sub.html">Datenschutz</a></li>
-                <li><a href="sub.html">Jobs</a></li>
-                <li><a href="sub.html">Anmelden</a></li>
+                <li><a href="secondsub.html">Impressum</a></li>
+                <li><a href="secondsub.html">Datenschutz</a></li>
+                <li><a href="secondsub.html">Jobs</a></li>
+                <li><a href="secondsub.html">Anmelden</a></li>
             </ul>
         </div>
     </div>
